<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Internal">

    <androidx.appcompat.widget.Toolbar
        android:background="#5d54a4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/memori_internal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnbuat"
            android:text="@string/buat_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnubah"
            android:text="@string/ubah_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnbaca"
            android:text="@string/baca_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnhapus"
            android:text="@string/hapus_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/txtdata"
            android:hint="@string/hasil_baca_file"
            android:background="#c0c0c0"
            android:inputType="textImeMultiLine"
            android:textSize="15sp"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="210dp"/>

    </LinearLayout>

</LinearLayout>